--- a/service/res/values-bg/strings.xml
+++ b/service/res/values-bg/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Комуникиране със системния потребителски интерфейс на автомобила с цел създаване на изгледи на задачи или получаване на известия за промени в този интерфейс."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Четене на настройките на автомобила ви за постоянен тетъринг"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Четене на настройките на автомобила ви за постоянен тетъринг"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"записване на свойствата на превозното средство"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"записване на свойствата на превозното средство"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"вмъкване на свойствата на превозното средство"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"вмъкване на свойствата на превозното средство"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Грешка в CAN шината"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN шината не реагира. Изключете и включете отново захранването на основното устройство и рестартирайте автомобила"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Моето устройство"</string>
