--- a/service/res/values-de/strings.xml
+++ b/service/res/values-de/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Mit der System-UI des Autos kommunizieren, um Ansichten zu Aufgaben zu erstellen oder über Änderungen an der System-UI benachrichtigt zu werden."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Dauerhafte Tethering-Einstellungen des Autos lesen"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Dauerhafte Tethering-Einstellungen des Autos lesen"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"Fahrzeugeigenschaften aufzeichnen"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"Fahrzeugeigenschaften aufzeichnen"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"Fahrzeugeigenschaften einfügen"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"Fahrzeugeigenschaften einfügen"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN-Bus ausgefallen"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN-Bus reagiert nicht. Trenne die Haupteinheit vom Stromnetz, schließe sie wieder an und starte das Auto."</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Mein Gerät"</string>
