--- a/service/res/values-ms/strings.xml
+++ b/service/res/values-ms/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Komunikasi dengan UI sistem kereta untuk membuat paparan tugas atau mendapatkan makluman tentang perubahan UI sistem."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Baca tetapan penambatan kekal kereta"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Baca tetapan penambatan kekal kereta"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"rekodkan sifat kenderaan"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"rekodkan sifat kenderaan"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"suntik sifat kenderaan"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"suntik sifat kenderaan"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Bas CAN gagal"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Bas CAN tidak bertindak balas. Cabut dan palamkan kembali kotak unit stereo dan mulakan semula kereta"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Peranti Saya"</string>
