--- a/service/res/values-sk/strings.xml
+++ b/service/res/values-sk/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Komunikácia s používateľským rozhraním systému na účely vytvárania zobrazení úloh alebo poskytovania upozornení na zmeny používateľského rozhrania systému."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Čítanie nastavení trvalého tetheringu v aute"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Čítanie nastavení trvalého tetheringu v aute"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"zaznamenávanie vlastností vozidla"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"zaznamenávanie vlastností vozidla"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"vloženie vlastností vozidla"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"vloženie vlastností vozidla"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Zbernica CAN zlyhala"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Zbernica CAN nereaguje. Odpojte autorádio a znova ho pripojte. Potom auto znova naštartujte."</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Moje zariadenie"</string>
