--- a/service/res/values-tr/strings.xml
+++ b/service/res/values-tr/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Görev görünümleri oluşturmak veya sistem arayüzündeki değişikliklerle ilgili bildirim almak için araç sisteminin arayüzü ile iletişim kurun."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Arabanın kalıcı tethering ayarlarını okuma"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Arabanın kalıcı tethering ayarlarını okuma"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"Araç özelliklerini kaydet"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"Araç özelliklerini kaydet"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"Araç özelliklerini ekle"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"Araç özelliklerini ekle"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN veri yolu başarısız"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN veri yolu yanıt vermiyor. Ana birim kutusunu söküp tekrar takın ve aracı yeniden çalıştırın"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Cihazım"</string>
