--- a/service/res/values-am/strings.xml
+++ b/service/res/values-am/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"የተግባር ዕይታዎችን ለመፍጠር ወይም ስለ የሥርዓት ዩአይ ለውጦች ማሳወቂያዎችን ለማግኘት ከመኪና የሥርዓት ዩአይ ጋር ይነጋገሩ።"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"የመኪና የሚቆዩ እንደ ሞደም መሰካት ቅንብሮችን ማንበብ"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"የመኪና የሚቆዩ እንደ ሞደም መሰካት ቅንብሮችን ማንበብ"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"የተሽከርካሪ ንብረቶችን ቅዳ"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"የተሽከርካሪ ንብረቶችን ቅዳ"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"የተሽከርካሪ ንብረቶችን አስገባ"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"የተሽከርካሪ ንብረቶችን አስገባ"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN አውቶብስ አልተሳካም"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN አውቶብስ ምላሽ አይሰጥም። የጭንቅላት አሃድ መያዣ ሳጥኑን ይሰኩ እና ይንቀሉ በመቀጠል መኪናውን ዳግም ያስጀምሩ"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"የእኔ መሣሪያ"</string>
