--- a/service/res/values-ar/strings.xml
+++ b/service/res/values-ar/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"يمكنك التواصل مع واجهة مستخدم نظام السيارة لإنشاء طرق عرض المهام أو الحصول على إشعارات بشأن التغييرات في واجهة مستخدم النظام."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"قراءة إعدادات التوصيل المستمر بالسيارة"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"قراءة إعدادات التوصيل المستمر بالسيارة"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"تسجيل سمات المركبة"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"تسجيل سمات المركبة"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"إدخال سمات المركبة"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"إدخال سمات المركبة"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"حدث خطأ في موصّل CAN"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"لا استجابة من موصّل CAN. يمكنك فصل صندوق وحدة الرأس وإعادة تشغيل السيارة."</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"جهازي"</string>
