--- a/service/res/values-as/strings.xml
+++ b/service/res/values-as/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"টাস্কভিউ সৃষ্টি কৰিবলৈ অথবা ছিষ্টেম UI সম্পৰ্কীয় সালসলনিসমূহৰ বিষয়ে জাননী পাবলৈ গাড়ীৰ ছিষ্টেম UIৰ সৈতে যোগাযোগ কৰক।"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"গাড়ীৰ পাৰছিষ্ট টেডাৰিং ছেটিং পঢ়িব পাৰে"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"গাড়ীৰ পাৰছিষ্ট টেডাৰিং ছেটিং পঢ়িব পাৰে"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"বাহনৰ বৈশিষ্ট্য ৰেকৰ্ড কৰক"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"বাহনৰ বৈশিষ্ট্য ৰেকৰ্ড কৰক"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"বাহনৰ বৈশিষ্ট্য ইনজেক্ট কৰক"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"বাহনৰ বৈশিষ্ট্য ইনজেক্ট কৰক"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN বাছ বিফল হৈছে"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN বাছে সঁহাৰি দিয়া নাই। হে’ড ইউনিট বাকচটো আঁতৰাই পুনৰ লগাওক"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"মোৰ ডিভাইচ"</string>
