--- a/service/res/values-az/strings.xml
+++ b/service/res/values-az/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Tapşırıq görünüşləri yaratmaq və ya sistemin istifadə interfeysi dəyişiklikləri haqqında bildiriş almaq üçün avtomobil sisteminin istifadə interfeysi ilə əlaqə yaradılması."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Avtomobilin davamlı modem rejimi ayarlarının oxunması"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Avtomobilin davamlı modem rejimi ayarlarının oxunması"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"avtomobilin xüsusiyyətlərini qeydə alın"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"avtomobilin xüsusiyyətlərini qeydə alın"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"avtomobilin xüsusiyyətlərini daxil edin"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"avtomobilin xüsusiyyətlərini daxil edin"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN idarəetmə mexanizmi uğursuz oldu"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN mexanizmi cavab vermir. Əsas cihaz panelini ayırın və yenidən qoşun, sonra avtomobili yenidən işə salın"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Cihazım"</string>
