--- a/service/res/values-b+sr+Latn/strings.xml
+++ b/service/res/values-b+sr+Latn/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Komuniciranje sa korisničkim interfejsom sistema automobila za pravljenje prikaza zadataka ili primanje obaveštenja o izmenama korisničkog interfejsa sistema."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Čitanje podešavanja stalno uključenog privezivanja za automobil"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Čitanje podešavanja stalno uključenog privezivanja za automobil"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"snimaj svojstva vozila"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"snimaj svojstva vozila"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"umetni svojstva vozila"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"umetni svojstva vozila"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Greška CAN magistrale"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN magistrala ne reaguje. Isključite i ponovo uključite glavnu jedinicu i ponovo pokrenite automobil"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Moj uređaj"</string>
