--- a/service/res/values-be/strings.xml
+++ b/service/res/values-be/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Падключацца да інтэрфейсу сістэмы аўтамабіля, каб ствараць прадстаўленні задач або атрымліваць апавяшчэнні пра змяненні інтэрфейсу сістэмы."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Счытванне пастаянных налад рэжыму мадэма ў аўтамабілі"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Счытванне пастаянных налад рэжыму мадэма ў аўтамабілі"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"запісваць уласцівасці аўтамабіля"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"запісваць уласцівасці аўтамабіля"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"дадаваць уласцівасці аўтамабіля"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"дадаваць уласцівасці аўтамабіля"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN-шына парушана"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN-шына не адказвае. Перападключыце канектар, а затым выключыце запальванне і паўторна завядзіце аўтамабіль"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Мая прылада"</string>
