--- a/service/res/values-da/strings.xml
+++ b/service/res/values-da/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Kommuniker med bilens systembrugerflade for at oprette opgavevisninger eller for at få notifikationer om ændringer af systembrugerfladen."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Indstillinger for vedvarende aflæsning af bilens netdeling"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Indstillinger for vedvarende aflæsning af bilens netdeling"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"registrere køretøjets egenskaber"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"registrere køretøjets egenskaber"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"indsætte køretøjets egenskaber"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"indsætte køretøjets egenskaber"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN-bus (Controller Area Network) mislykkedes"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN-bus (Controller Area Network) svarer ikke. Afbryd forbindelsen til bilens hovedenhed, tilslut den igen, og genstart bilen"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Min enhed"</string>
