--- a/service/res/values-el/strings.xml
+++ b/service/res/values-el/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Επικοινωνήστε με τη διεπαφή χρήστη συστήματος για να δημιουργήσετε προβολές εργασιών ή για να λαμβάνετε ειδοποιήσεις σχετικά με αλλαγές στη διεπαφή χρήστη συστήματος."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Διαβάστε τις σταθερές ρυθμίσεις σύνδεσης του αυτοκινήτου"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Διαβάστε τις σταθερές ρυθμίσεις σύνδεσης του αυτοκινήτου"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"εγγραφή ιδιοτήτων οχήματος"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"εγγραφή ιδιοτήτων οχήματος"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"εισαγωγή ιδιοτήτων οχήματος"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"εισαγωγή ιδιοτήτων οχήματος"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Αποτυχία διαύλου CAN"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Ο δίαυλος CAN δεν αποκρίνεται. Αποσυνδέστε και συνδέστε ξανά το πλαίσιο μονάδας κεφαλής και έπειτα επανεκκινήστε το αυτοκίνητο"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Η συσκευή μου"</string>
