--- a/service/res/values-en-rGB/strings.xml
+++ b/service/res/values-en-rGB/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Communicate with the car system UI for creating task views or to be notified about system UI changes."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Read car\'s persist tethering settings"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Read car\'s persist tethering settings"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"record vehicle properties"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"record vehicle properties"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"inject vehicle properties"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"inject vehicle properties"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN bus failed"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN bus does not respond. Unplug and plug back in head unit box and restart the car"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"My Device"</string>
