--- a/service/res/values-es/strings.xml
+++ b/service/res/values-es/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Comunicarse con la UI del sistema del coche para crear vistas de tareas o recibir notificaciones sobre cambios en la UI del sistema."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Leer la configuración de conexión compartida continua del coche"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Leer la configuración de conexión compartida continua del coche"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"registrar propiedades del vehículo"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"registrar propiedades del vehículo"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"inyectar propiedades del vehículo"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"inyectar propiedades del vehículo"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Fallo de bus CAN"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"El bus CAN no responde. Desconecta el cabezal, conéctalo de nuevo y reinicia el coche"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Mi dispositivo"</string>
