--- a/service/res/values-eu/strings.xml
+++ b/service/res/values-eu/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Komunikatu autoaren sistemaren erabiltzaile-interfazearekin zeregin-ikuspegiak sortzeko edo sistemaren erabiltzaile-interfazean gertatzen diren aldaketen berri izateko."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Irakurri autoaren etengabeko konexio-partekatzearen ezarpenak"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Irakurri autoaren etengabeko konexio-partekatzearen ezarpenak"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"ibilgailuen propietateak erregistratu"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"ibilgailuen propietateak erregistratu"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"ibilgailuen propietateak txertatu"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"ibilgailuen propietateak txertatu"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN autobusak huts egin du"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN bus-ak ez du erantzuten. Desentxufatu eta entxufatu berriro gailu nagusia eta berrabiarazi autoa."</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Nire gailua"</string>
