--- a/service/res/values-fr/strings.xml
+++ b/service/res/values-fr/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Communiquer avec l\'UI du système de la voiture pour créer des vues de tâches ou être notifié des modifications de l\'UI du système."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Lire les paramètres de partage de connexion permanent de la voiture"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Lire les paramètres de partage de connexion permanent de la voiture"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"enregistrer les propriétés du véhicule"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"enregistrer les propriétés du véhicule"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"injecter les propriétés du véhicule"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"injecter les propriétés du véhicule"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Échec du bus de données CAN"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Le bus de données CAN ne répond pas. Débranchez et rebranchez le boîtier de l\'unité principale, puis redémarrez la voiture"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Mon appareil"</string>
