--- a/service/res/values-hi/strings.xml
+++ b/service/res/values-hi/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"टास्क व्यू बनाने या सिस्टम यूज़र इंटरफ़ेस (यूआई) में हुए बदलावों की सूचना पाने के लिए, कार के सिस्टम यूज़र इंटरफ़ेस (यूआई) से कनेक्ट करें."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"कार में हमेशा चालू रहने वाली टेदरिंग की सेटिंग पढ़ने की अनुमति दें"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"कार में हमेशा चालू रहने वाली टेदरिंग की सेटिंग पढ़ने की अनुमति दें"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"वाहन की प्रॉपर्टी से जुड़ी जानकारी को रिकॉर्ड करने की अनुमति दें"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"वाहन की प्रॉपर्टी से जुड़ी जानकारी को रिकॉर्ड करने की अनुमति दें"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"वाहन की प्रॉपर्टी से जुड़ी जानकारी डालने की अनुमति दें"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"वाहन की प्रॉपर्टी से जुड़ी जानकारी डालने की अनुमति दें"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"\'CAN बस\' काम नहीं कर पा रहा है"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"\'CAN बस\' जवाब नहीं दे रहा है. हेडयूनिट बॉक्स का प्लग निकालकर वापस लगाएं और कार को रीस्टार्ट करें"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"मेरा डिवाइस"</string>
