--- a/service/res/values-hu/strings.xml
+++ b/service/res/values-hu/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Kommunikáció az autó rendszerének felhasználói felületével a feladatnézet létrehozásához vagy a rendszerfelületi változásokról való értesítéshez."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Az autó internetmegosztás fenntartására vonatkozó beállításainak olvasása"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Az autó internetmegosztás fenntartására vonatkozó beállításainak olvasása"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"járműtulajdonságok rögzítése"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"járműtulajdonságok rögzítése"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"járműtulajdonságok beszúrása"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"járműtulajdonságok beszúrása"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"A CAN-busz hibát észlelt"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"A CAN-busz nem válaszol. Csatlakoztassa újra a fejegységet, és indítsa újra az autót."</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Saját eszköz"</string>
