--- a/service/res/values-hy/strings.xml
+++ b/service/res/values-hy/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Միանալ մեքենայի համակարգի միջերեսին՝ առաջադրանքների ներկայացումներ ստեղծելու և համակարգի միջերեսի փոփոխությունների մասին ծանուցումներ ստանալու համար։"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Կարդալ մեքենայի մոդեմի ռեժիմի մշտական կարգավորումները"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Կարդալ մեքենայի մոդեմի ռեժիմի մշտական կարգավորումները"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"գրանցել մեքենայի հատկությունները"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"գրանցել մեքենայի հատկությունները"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"ավելացնել մեքենայի հատկությունները"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"ավելացնել մեքենայի հատկությունները"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN անվադողի սխալ"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN անվադողը չի պատասխանում: Անջատեք և նորից միացրեք միակցիչը, ապա անջատեք վառոցքը և վերագործարկեք մեքենան:"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Իմ սարքը"</string>
