--- a/service/res/values-in/strings.xml
+++ b/service/res/values-in/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Berkomunikasi dengan UI sistem mobil untuk membuat tampilan tugas atau mendapatkan notifikasi tentang perubahan UI sistem."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Baca setelan tethering persisten mobil"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Baca setelan tethering persisten mobil"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"merekam properti kendaraan"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"merekam properti kendaraan"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"memasukkan properti kendaraan"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"memasukkan properti kendaraan"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN bus gagal"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN bus tidak merespons. Cabut dan colokkan kembali boks headunit, lalu nyalakan ulang mobil"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Perangkat Saya"</string>
