--- a/service/res/values-it/strings.xml
+++ b/service/res/values-it/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Comunicazione con l\'UI di sistema dell\'auto per creare visualizzazioni delle attività o ricevere notifiche sulle modifiche dell\'UI di sistema."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Lettura delle impostazioni di tethering permanenti dell\'auto"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Lettura delle impostazioni di tethering permanenti dell\'auto"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"registrare le proprietà del veicolo"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"registrare le proprietà del veicolo"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"inserire le proprietà del veicolo"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"inserire le proprietà del veicolo"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Comunicazione tramite bus CAN non riuscita"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Il bus CAN non risponde. Scollega e ricollega l\'unità principale e riaccendi il motore."</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Mio dispositivo"</string>
