--- a/service/res/values-iw/strings.xml
+++ b/service/res/values-iw/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"תקשורת עם ממשק המשתמש של מערכת הרכב ליצירת תצוגות של משימות או לקבלת התראות על שינויים בממשק המשתמש של המערכת."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"קריאת הגדרות שיתוף האינטרנט הקבועות של הרכב"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"קריאת הגדרות שיתוף האינטרנט הקבועות של הרכב"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"רישום מאפייני הרכב"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"רישום מאפייני הרכב"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"החדרת מאפייני הרכב"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"החדרת מאפייני הרכב"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"פרוטוקול CAN bus נכשל"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"פרוטוקול CAN bus לא מגיב. יש לנתק ולחבר שוב את מערכת הסטריאו ולהתניע מחדש את הרכב"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"המכשיר שלי"</string>
