--- a/service/res/values-ja/strings.xml
+++ b/service/res/values-ja/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"車のシステム UI と通信して、タスクビューを作成したり、システム UI の変更に関する通知を受け取ったりする。"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"車の永続的なテザリング設定の読み取り"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"車の永続的なテザリング設定の読み取り"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"車両プロパティの記録"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"車両プロパティの記録"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"車両プロパティの挿入"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"車両プロパティの挿入"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN バスでエラーが発生しました"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN バスが応答しません。ヘッドユニット ボックスのプラグを抜いて接続し直し、車を再始動してください"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"自分のデバイス"</string>
