--- a/service/res/values-kk/strings.xml
+++ b/service/res/values-kk/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Тапсырмалар көрінісін жасау немесе жүйе интерфейсіндегі өзгерістер жөнінде хабарландыру алу үшін көліктің жүйе интерфейсімен байланысу"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Көліктің тұрақты тетеринг параметрлерін оқу"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Көліктің тұрақты тетеринг параметрлерін оқу"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"көлік сипаттамаларын жазу"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"көлік сипаттамаларын жазу"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"көлік сипаттамаларын енгізу"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"көлік сипаттамаларын енгізу"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN шинасы істен шықты"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN шинасы жауап бермейді. Негізгі модульді ажыратып, қайта жалғаңыз және көлікті қайта оталдырыңыз"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Құрылғым"</string>
