--- a/service/res/values-km/strings.xml
+++ b/service/res/values-km/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"ទំនាក់ទំនង​ជាមួយ ui ប្រព័ន្ធសម្រាប់​ការបង្កើតទិដ្ឋភាពកិច្ចការ ឬទទួលបាន​ការជូនដំណឹងអំពី​ការផ្លាស់ប្ដូរ ui ប្រព័ន្ធ។"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"អានការកំណត់ការ​ភ្ជាប់ដែលបន្តបើករបស់រថយន្ត"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"អានការកំណត់ការ​ភ្ជាប់ដែលបន្តបើករបស់រថយន្ត"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"កត់ត្រាលក្ខណៈរបស់យានជំនិះ"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"កត់ត្រាលក្ខណៈរបស់យានជំនិះ"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"បញ្ចូលលក្ខណៈរបស់យានជំនិះ"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"បញ្ចូលលក្ខណៈរបស់យានជំនិះ"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"មិនអាច​ដំណើរការ CAN bus បានទេ"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN bus មិនឆ្លើយតបទេ។ សូមផ្ដាច់ រួចភ្ជាប់​ប្រអប់​ឧបករណ៍ចាក់តន្ត្រី​ម្តងទៀត បន្ទាប់មក​បញ្ឆេះ​រថយន្ត​ឡើងវិញ"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"ឧបករណ៍របស់ខ្ញុំ"</string>
