--- a/service/res/values-kn/strings.xml
+++ b/service/res/values-kn/strings.xml
@@ -187,7 +187,7 @@
     <string name="car_permission_label_control_car_power_policy" msgid="6840069695926008330">"ಕಾರಿನ ಪವರ್‌ ನೀತಿಯನ್ನು ನಿಯಂತ್ರಿಸಿ"</string>
     <string name="car_permission_desc_control_car_power_policy" msgid="8565782440893507028">"ಕಾರಿನ ಪವರ್ ನೀತಿಯನ್ನು ನಿಯಂತ್ರಿಸಿ."</string>
     <string name="car_permission_label_adjust_shutdown_process" msgid="184826150481255557">"ಸ್ಥಗಿತಗೊಳಿಸುವ ಪ್ರಕ್ರಿಯೆಯನ್ನು ಹೊಂದಿಸಿ"</string>
-    <string name="car_permission_desc_adjust_shutdown_process" msgid="5059212045073049971">"ಸ್ಥಗಿತಗೊಳಿಸುವ ಪ್ರಕ್ರಿಯೆಯನ್ನು ಹೊಂದಿಸಿ."</string>
+    <string name="car_permission_desc_adjust_shutdown_process" msgid="5059212045073049971">"ಸ್ಥಗಿತಗೊಳಿಸುವ ಪ್ರಕ್ರಿಯೆಯನ್ನು ಅಡ್ಜಸ್ಟ್ ಮಾಡಿ."</string>
     <string name="car_permission_label_template_renderer" msgid="3464887382919754850">"ಟೆಂಪ್ಲೇಟ್‌ಗಳನ್ನು ರೆಂಡರ್ ಮಾಡಿ"</string>
     <string name="car_permission_desc_template_renderer" msgid="6047233999260920122">"ಟೆಂಪ್ಲೇಟ್‌ಗಳನ್ನು ರೆಂಡರ್ ಮಾಡಿ."</string>
     <string name="car_permission_label_control_car_app_launch" msgid="214632389637409226">"ಪ್ರಾರಂಭಿಸುವ ಅಪ್ಲಿಕೇಶನ್‌ಗಳನ್ನು ನಿಯಂತ್ರಿಸಿ"</string>
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"ಕಾರ್ಯ ವೀಕ್ಷಣೆಗಳನ್ನು ರಚಿಸಲು ಅಥವಾ ಸಿಸ್ಟಂ UI ಬದಲಾವಣೆಗಳ ಕುರಿತು ಅಧಿಸೂಚನೆಗಳನ್ನು ಪಡೆಯಲು ಕಾರ್ ಸಿಸ್ಟಂ UI ಮೂಲಕ ಸಂವಹನ ನಡೆಸಿ."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"ಕಾರ್‌ನ ಪರ್ಸಿಸ್ಟ್ ಟೆಥರಿಂಗ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಓದಿ"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"ಕಾರ್‌ನ ಪರ್ಸಿಸ್ಟ್ ಟೆಥರಿಂಗ್ ಸೆಟ್ಟಿಂಗ್‌ಗಳನ್ನು ಓದಿ"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"ವಾಹನದ ಪ್ರಾಪರ್ಟಿಗಳನ್ನು ರೆಕಾರ್ಡ್ ಮಾಡಿ"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"ವಾಹನದ ಪ್ರಾಪರ್ಟಿಗಳನ್ನು ರೆಕಾರ್ಡ್ ಮಾಡಿ"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"ವಾಹನದ ಪ್ರಾಪರ್ಟಿಗಳನ್ನು ಇಂಜೆಕ್ಟ್ ಮಾಡಿ"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"ವಾಹನದ ಪ್ರಾಪರ್ಟಿಗಳನ್ನು ಇಂಜೆಕ್ಟ್ ಮಾಡಿ"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"ಸಿಎಎನ್ ಬಸ್ ಕೆಟ್ಟಿದೆ"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN ಬಸ್ ಸ್ಪಂದಿಸುತ್ತಿಲ್ಲ. ಹೆಡ್ ಯುನಿಟ್ ಪೆಟ್ಟಿಗೆಯನ್ನು ಅನ್‌ಪ್ಲಗ್ ಮಾಡಿ ಮತ್ತೆ ಪ್ಲಗ್ ಮಾಡಿ ಕಾರನ್ನು ಪುನರಾರಂಭಿಸಿ"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"ನನ್ನ ಸಾಧನ"</string>
