--- a/service/res/values-lo/strings.xml
+++ b/service/res/values-lo/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"ສື່ສານກັບສ່ວນຕິດຕໍ່ຜູ້ໃຊ້ຂອງລະບົບລົດເພື່ອສ້າງ Taskviews ຫຼື ໄດ້ຮັບການແຈ້ງເຕືອນກ່ຽວກັບການປ່ຽນແປງສ່ວນຕິດຕໍ່ຜູ້ໃຊ້ຂອງລະບົບ."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"ອ່ານການຕັ້ງຄ່າການປ່ອຍສັນຍານຢ່າງຕໍ່ເນື່ອງຂອງລົດ"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"ອ່ານການຕັ້ງຄ່າການປ່ອຍສັນຍານຢ່າງຕໍ່ເນື່ອງຂອງລົດ"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"ບັນທຶກຄຸນສົມບັດພາຫະນະ"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"ບັນທຶກຄຸນສົມບັດພາຫະນະ"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"ປ້ອນຄຸນສົມບັດພາຫະນະ"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"ປ້ອນຄຸນສົມບັດພາຫະນະ"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN bus ບໍ່ສຳເລັດ"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN bus ບໍ່ຕອບສະໜອງ. ຖອດປລັກກ່ອງເຄື່ອງຫຼິ້ນວິທະຍຸ (Headunit) ແລ້ວສຽບເຂົ້າຄືນໃໝ່ ແລະ ຣິສະຕາດລົດ"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"ອຸປະກອນຂອງຂ້ອຍ"</string>
