--- a/service/res/values-lt/strings.xml
+++ b/service/res/values-lt/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Naudodami automobilio sistemos NS kurkite užduočių peržiūras arba gaukite pranešimus apie sistemos NS pakeitimus."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Skaityti automobilio nuolatinius įrenginio kaip modemo naudojimo nustatymus"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Skaityti automobilio nuolatinius įrenginio kaip modemo naudojimo nustatymus"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"transporto priemonės ypatybių įrašymas"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"transporto priemonės ypatybių įrašymas"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"transporto priemonės ypatybių įterpimas"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"transporto priemonės ypatybių įterpimas"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN BUS klaida"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN BUS nereaguoja. Atjunkite ir vėl prijunkite pagrindinio įtaiso dėžutę."</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Mano įrenginys"</string>
