--- a/service/res/values-mk/strings.xml
+++ b/service/res/values-mk/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"да комуницира со корисничкиот интерфејс на автомобилскиот систем за да создава прикази на задачи или да се информира за промените во корисничкиот интерфејс на системот"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"да ги читаат поставките за секогаш вклучено поврзување на интернет преку мобилен на автомобилот"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"да ги читаат поставките за секогаш вклучено поврзување на интернет преку мобилен на автомобилот"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"да евидентираат својства на возилата"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"да евидентираат својства на возилата"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"да вметнуваат својства на возилата"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"да вметнуваат својства на возилата"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN-магистралата не успеа"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN-магистралата не реагира. Откачете ја и повторно прикачете ја кутијата на главната единица и рестартирајте го автомобилот"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Мојот уред"</string>
