--- a/service/res/values-ml/strings.xml
+++ b/service/res/values-ml/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"ടാസ്‌ക് കാഴ്ചകൾ സൃഷ്ടിക്കാനോ സിസ്റ്റം UI മാറ്റങ്ങളെ കുറിച്ചുള്ള അറിയിപ്പ് നേടാനോ കാർ സിസ്റ്റം UI-യുമായി ആശയവിനിമയം നടത്തുക."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"കാറിൽ സ്ഥിരമായുള്ള ടെതറിംഗ് ക്രമീകരണം വായിക്കുക"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"കാറിൽ സ്ഥിരമായുള്ള ടെതറിംഗ് ക്രമീകരണം വായിക്കുക"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"വാഹന പ്രോപ്പർട്ടികൾ റെക്കോർഡ് ചെയ്യുക"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"വാഹന പ്രോപ്പർട്ടികൾ റെക്കോർഡ് ചെയ്യുക"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"വാഹന പ്രോപ്പർട്ടികൾ ഇൻജക്റ്റ് ചെയ്യുക"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"വാഹന പ്രോപ്പർട്ടികൾ ഇൻജക്റ്റ് ചെയ്യുക"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN ബസ് പരാജയപ്പെട്ടു"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN ബസ് പ്രതികരിക്കുന്നില്ല. ഹെഡ്‌യൂണിറ്റ് ബോക്‌സ്, അൺപ്ലഗ് ചെയ്‌ത്, വീണ്ടും പ്ലഗ് ചെയ്‌ത്, കാർ റീസ്‌റ്റാർട്ട് ചെയ്യുക"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"എന്റെ ഉപകരണം"</string>
