--- a/service/res/values-nb/strings.xml
+++ b/service/res/values-nb/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"kommunisere med system-UI-et for bilen for å lage oppgavevisninger eller få varsler om endringer av system-UI-et"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Les bilens innstillinger for vedvarende internettdeling"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Les bilens innstillinger for vedvarende internettdeling"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"registrere kjøretøyegenskaper"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"registrere kjøretøyegenskaper"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"injisere kjøretøyegenskaper"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"injisere kjøretøyegenskaper"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN-bus mislyktes"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN-bus svarer ikke. Koble bilens hovedenhet ut og inn igjen, og start bilen på nytt"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Enheten min"</string>
