--- a/service/res/values-ne/strings.xml
+++ b/service/res/values-ne/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"टास्क भ्यू बनाउन वा सिस्टम ui मा गरिने परिवर्तनहरूका बारेमा सूचना प्राप्त गर्न कारको सिस्टम ui मा कनेक्ट गर्नुहोस्।"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"कारमा सधैँ अन रहने टेदरिङसम्बन्धी सेटिङ रिड गर्ने"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"कारमा सधैँ अन रहने टेदरिङसम्बन्धी सेटिङ रिड गर्ने"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"सवारी साधनका विशेषताहरू रेकर्ड गर्ने अनुमति दिनुहोस्"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"सवारी साधनका विशेषताहरू रेकर्ड गर्ने अनुमति दिनुहोस्"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"सवारी साधनका विशेषताहरू हाल्ने अनुमति दिनुहोस्"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"सवारी साधनका विशेषताहरू हाल्ने अनुमति दिनुहोस्"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN bus असफल भयो"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN bus ले प्रतिक्रिया जनाएन। हेडयुनिट बाकसलाई प्लगबाट निकालेर फेरि प्लगमा घुसाउनुहोस् र कार पुनःसुरु गर्नुहोस्‌"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"मेरो डिभाइस"</string>
