--- a/service/res/values-pa/strings.xml
+++ b/service/res/values-pa/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"ਕਾਰਜ-ਦ੍ਰਿਸ਼ ਬਣਾਉਣ ਜਾਂ ਸਿਸਟਮ UI ਸੰਬੰਧੀ ਤਬਦੀਲੀਆਂ ਬਾਰੇ ਸੂਚਨਾ ਪ੍ਰਾਪਤ ਕਰਨ ਲਈ ਕਾਰ ਦੇ ਸਿਸਟਮ UI ਨਾਲ ਸੰਚਾਰ ਕਰੋ।"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"ਕਾਰ ਦੀਆਂ ਸਥਿਰ ਟੈਦਰਿੰਗ ਸੈਟਿੰਗਾਂ ਨੂੰ ਪੜ੍ਹੋ"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"ਕਾਰ ਦੀਆਂ ਸਥਿਰ ਟੈਦਰਿੰਗ ਸੈਟਿੰਗਾਂ ਨੂੰ ਪੜ੍ਹੋ"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"ਵਾਹਨ ਦੀਆਂ ਪ੍ਰਾਪਰਟੀਆਂ ਬਾਰੇ ਜਾਣਕਾਰੀ ਰਿਕਾਰਡ ਕਰਨ ਦੀ ਆਗਿਆ ਦਿਓ"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"ਵਾਹਨ ਦੀਆਂ ਪ੍ਰਾਪਰਟੀਆਂ ਬਾਰੇ ਜਾਣਕਾਰੀ ਰਿਕਾਰਡ ਕਰਨ ਦੀ ਆਗਿਆ ਦਿਓ"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"ਵਾਹਨ ਦੀਆਂ ਪ੍ਰਾਪਰਟੀਆਂ ਬਾਰੇ ਜਾਣਕਾਰੀ ਸ਼ਾਮਲ ਕਰਨ ਦੀ ਆਗਿਆ ਦਿਓ"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"ਵਾਹਨ ਦੀਆਂ ਪ੍ਰਾਪਰਟੀਆਂ ਬਾਰੇ ਜਾਣਕਾਰੀ ਸ਼ਾਮਲ ਕਰਨ ਦੀ ਆਗਿਆ ਦਿਓ"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN ਬੱਸ ਅਸਫਲ ਰਹੀ"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN ਬੱਸ ਕੰਮ ਨਹੀਂ ਕਰਦੀ। ਹੈੱਡ ਯੂਨਿਟ ਬਾਕਸ ਨੂੰ ਅਨਪਲੱਗ ਕਰੋ ਅਤੇ ਦੁਬਾਰਾ ਪਲੱਗ ਲਗਾ ਕੇ ਕਾਰ ਨੂੰ ਮੁੜ-ਚਾਲੂ ਕਰੋ"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"ਮੇਰਾ ਡੀਵਾਈਸ"</string>
