--- a/service/res/values-pt/strings.xml
+++ b/service/res/values-pt/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Faça a comunicação com a interface do sistema do carro para criar visões de tarefas ou receber notificações sobre as mudanças na interface do sistema."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Ler as configurações de tethering persistente do carro"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Ler as configurações de tethering persistente do carro"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"registrar propriedades do veículo"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"registrar propriedades do veículo"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"injetar propriedades do veículo"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"injetar propriedades do veículo"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Falha no barramento CAN"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"O barramento CAN parou de responder. Desconecte e conecte novamente a caixa da unidade principal, depois ligue o carro"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Meu dispositivo"</string>
