--- a/service/res/values-ro/strings.xml
+++ b/service/res/values-ro/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Poți să comunici cu interfața de utilizare a sistemului mașinii pentru a crea vizualizări ale activităților sau pentru a primi notificări privind modificările interfeței de utilizare a sistemului."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Citește setările de tethering persistent ale mașinii"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Citește setările de tethering persistent ale mașinii"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"înregistrează proprietățile vehiculului"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"înregistrează proprietățile vehiculului"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"injectează proprietățile vehiculului"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"injectează proprietățile vehiculului"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Magistrala CAN nu a reușit"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Magistrala CAN nu răspunde. Deconectează și reconectează unitatea radio, apoi repornește mașina"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Dispozitivul meu"</string>
