--- a/service/res/values-ru/strings.xml
+++ b/service/res/values-ru/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Подключаться к интерфейсу системы автомобиля, чтобы создавать представления задач или получать уведомления об изменениях."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Чтение постоянных настроек режима модема в автомобиле"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Чтение постоянных настроек режима модема в автомобиле"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"запись характеристик автомобиля"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"запись характеристик автомобиля"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"добавление характеристик автомобиля"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"добавление характеристик автомобиля"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Произошла ошибка шины CAN."</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Шина CAN не отвечает. Переподключите коннектор, а затем выключите зажигание и заведите машину снова."</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Мое устройство"</string>
