--- a/service/res/values-sl/strings.xml
+++ b/service/res/values-sl/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Komuniciranje s sistemskim uporabniškim vmesnikom avtomobila zaradi ustvarjanja pogledov opravil ali obveščanje o spremembah sistemskega uporabniškega vmesnika."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Branje trajnih nastavitev povezave avtomobila z internetom prek mobilnega telefona"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Branje trajnih nastavitev povezave avtomobila z internetom prek mobilnega telefona"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"beleženje lastnosti vozila"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"beleženje lastnosti vozila"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"vstavljanje lastnosti vozila"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"vstavljanje lastnosti vozila"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Napaka vodila CAN"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Vodilo CAN se ne odziva. Odklopite in znova priklopite ohišje avtomobilskega vmesnika ter znova zaženite avtomobil"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Moja naprava"</string>
