--- a/service/res/values-sr/strings.xml
+++ b/service/res/values-sr/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Комуницирање са корисничким интерфејсом система аутомобила за прављење приказа задатака или примање обавештења о изменама корисничког интерфејса система."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Читање подешавања стално укљученог привезивања за аутомобил"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Читање подешавања стално укљученог привезивања за аутомобил"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"снимај својства возила"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"снимај својства возила"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"уметни својства возила"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"уметни својства возила"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Грешка CAN магистрале"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN магистрала не реагује. Искључите и поново укључите главну јединицу и поново покрените аутомобил"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Мој уређај"</string>
