--- a/service/res/values-sv/strings.xml
+++ b/service/res/values-sv/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Kommunicera med bilsystemets användargränssnitt för att skapa aktivitetsvyer eller få aviseringar om ändringar av systemets användargränssnitt."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Läsa bilens inställningar för permanent internetdelning"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Läsa bilens inställningar för permanent internetdelning"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"registrera fordonsegenskaper"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"registrera fordonsegenskaper"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"injicera fordonsegenskaper"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"injicera fordonsegenskaper"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Fel i CAN-bussen"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN-bussen svarar inte. Koppla från huvudenheten och koppla in den igen. Starta sedan om bilen"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Min enhet"</string>
