--- a/service/res/values-sw/strings.xml
+++ b/service/res/values-sw/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Wasiliana na kiolesura cha mfumo wa gari kwa ajili ya kuunda mionekano ya jukumu au kuarifiwa kuhusu mabadiliko ya kiolesura cha mfumo."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Soma mipangilio ya gari ya kusambaza mtandao kila wakati"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Soma mipangilio ya gari ya kusambaza mtandao kila wakati"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"kurekodi sifa za gari"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"kurekodi sifa za gari"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"kuweka sifa za gari"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"kuweka sifa za gari"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Imeshindwa kuleta maelezo ya kebo CAN"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Kebo ya CAN haifanyi kazi. Ondoa kisha urudishe tena kisanduku cha sehemu kuu na uzime kisha uwashe gari"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Kifaa Changu"</string>
