--- a/service/res/values-te/strings.xml
+++ b/service/res/values-te/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"టాస్క్‌వ్యూలను క్రియేట్ చేయడం లేదా సిస్టమ్ UI మార్పుల గురించి తెలియజేయడం కోసం కారు సిస్టమ్ UIతో కమ్యూనికేట్ చేయండి."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"కారు స్థిర టెథరింగ్ సెట్టింగ్‌ల సమాచారాన్ని చదవండి"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"కారు స్థిర టెథరింగ్ సెట్టింగ్‌ల సమాచారాన్ని చదవండి"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"వాహన ప్రాపర్టీలను రికార్డ్ చేయండి"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"వాహన ప్రాపర్టీలను రికార్డ్ చేయండి"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"వాహన ప్రాపర్టీలను ఇంజెక్ట్ చేయండి"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"వాహన ప్రాపర్టీలను ఇంజెక్ట్ చేయండి"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN బస్సు విఫలమైంది"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN బస్సు స్పందించలేదు. హెడ్ యూనిట్ బాక్స్‌‍‌ని ప్లగ్ మరియు అన్‌ప్లగ్ చేసి కారుని పునఃప్రారంభించుము"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"నా పరికరం"</string>
