--- a/service/res/values-th/strings.xml
+++ b/service/res/values-th/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"สื่อสารกับ UI ของระบบรถยนต์เพื่อสร้างมุมมองงานหรือรับการแจ้งเตือนเกี่ยวกับการเปลี่ยน UI ของระบบ"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"อ่านการตั้งค่าการเชื่อมต่ออินเทอร์เน็ตผ่านมือถือถาวรของรถยนต์"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"อ่านการตั้งค่าการเชื่อมต่ออินเทอร์เน็ตผ่านมือถือถาวรของรถยนต์"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"บันทึกพร็อพเพอร์ตี้ต่างๆ ของรถ"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"บันทึกพร็อพเพอร์ตี้ต่างๆ ของรถ"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"แทรกพร็อพเพอร์ตี้ต่างๆ ของรถ"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"แทรกพร็อพเพอร์ตี้ต่างๆ ของรถ"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN Bus ล้มเหลว"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN Bus ไม่ตอบสนอง ถอดปลั๊กกล่องเครื่องเล่นวิทยุ (Headunit) แล้วเสียบกลับเข้าไป สตาร์ทรถอีกครั้ง"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"อุปกรณ์ของฉัน"</string>
