--- a/service/res/values-tl/strings.xml
+++ b/service/res/values-tl/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Makipag-ugnayan sa UI ng system ng kotse para sa paggawa ng mga taskview o pagtanggap ng mga notification tungkol sa mga pagbabago sa UI ng system."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Basahin ang mga setting ng patuloy na pag-tether ng sasakyan"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Basahin ang mga setting ng patuloy na pag-tether ng sasakyan"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"i-record ang mga property ng sasakyan"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"i-record ang mga property ng sasakyan"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"i-inject ang mga property ng sasakyan"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"i-inject ang mga property ng sasakyan"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Hindi gumana ang CAN bus"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Hindi tumugon ang CAN bus. Hugutin at muling isaksak ang headunit box at i-restart ang sasakyan"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Aking Device"</string>
