--- a/service/res/values-ur/strings.xml
+++ b/service/res/values-ur/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"ٹاسک کے مناظر تخلیق کرنے یا سسٹم UI تبدیلیوں کے بارے میں مطلع کرنے کے لیے کار سسٹم UI کے ساتھ مواصلت کریں۔"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"کار کی برقرار ٹیدرنگ کی ترتیبات کو پڑھیں"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"کار کی برقرار ٹیدرنگ کی ترتیبات کو پڑھیں"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"گاڑی کی پراپرٹیز ریکارڈ کریں"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"گاڑی کی پراپرٹیز ریکارڈ کریں"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"گاڑی کی پراپرٹیز داخل کریں"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"گاڑی کی پراپرٹیز داخل کریں"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"کین بس ناکام ہو گئی"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"کین بس جواب نہیں دیتی ہے۔ ہیڈیونٹ باکس کو ان پلگ کر کے دوبارہ پلگ کریں اور کار کو دوبارہ شروع کریں"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"میرا آلہ"</string>
