--- a/service/res/values-uz/strings.xml
+++ b/service/res/values-uz/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Vazifa panellarini yaratish yoki tizim interfeysi oʻzgarishlari haqida xabar olish uchun avtomobil tizim inteyfeysi bilan muloqot qilish."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Avtomobilning doimiy ulanish sozlamalarini oʻqish"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Avtomobilning doimiy ulanish sozlamalarini oʻqish"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"avtomobilning xususiyatlarini yozib olish"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"avtomobilning xususiyatlarini yozib olish"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"avtomobilning xususiyatlarini kiritish"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"avtomobilning xususiyatlarini kiritish"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN shinalarida xatolik yuz berdi"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN javob bermayapti. Konnektorni chiqaring va qayta ulang, keyin avtomobilni oʻt oldiring"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Qurilmam"</string>
