--- a/service/res/values-vi/strings.xml
+++ b/service/res/values-vi/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"Giao tiếp với giao diện người dùng hệ thống ô tô để tạo các chế độ xem tác vụ hoặc nhận thông báo về các thay đổi đối với giao diện người dùng hệ thống."</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"Đọc chế độ chia sẻ Internet liên tục của ô tô"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"Đọc chế độ chia sẻ Internet liên tục của ô tô"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"ghi lại thuộc tính của xe"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"ghi lại thuộc tính của xe"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"chèn thuộc tính xe"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"chèn thuộc tính xe"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"Đường dẫn chính CAN không hoạt động"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"Đường dẫn chính CAN không phản hồi. Rút rồi cắm lại hộp bộ đầu và khởi động lại ô tô"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"Thiết bị của tôi"</string>
