--- a/service/res/values-zh-rCN/strings.xml
+++ b/service/res/values-zh-rCN/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"与汽车系统界面进行通信，以便创建任务视图或接收与系统界面变更相关的通知。"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"读取汽车的持久网络共享设置"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"读取汽车的持久网络共享设置"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"记录车辆属性"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"记录车辆属性"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"注入车辆属性"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"注入车辆属性"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"CAN 总线故障"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"CAN 总线没有响应。请将主机盒插头拔下并插回，然后重新启动汽车"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"我的设备"</string>
