--- a/service/res/values-zh-rHK/strings.xml
+++ b/service/res/values-zh-rHK/strings.xml
@@ -232,6 +232,10 @@
     <string name="car_permission_desc_manage_car_system_ui" msgid="6201733970421818637">"與汽車系統使用者介面通訊，以建立工作視圖或獲取有關系統使用者介面變更的通知。"</string>
     <string name="car_permission_label_read_persist_tethering_settings" msgid="6395145649477916950">"讀取汽車的持續網絡共享設定"</string>
     <string name="car_permission_desc_read_persist_tethering_settings" msgid="7373546466696896323">"讀取汽車的持續網絡共享設定"</string>
+    <string name="car_permission_label_record_vehicle_properties" msgid="958971344399611906">"記錄汽車屬性"</string>
+    <string name="car_permission_desc_record_vehicle_properties" msgid="2560365700851584569">"記錄汽車屬性"</string>
+    <string name="car_permission_label_inject_vehicle_properties" msgid="2943134725643169428">"插入汽車屬性"</string>
+    <string name="car_permission_desc_inject_vehicle_properties" msgid="2616112105084870775">"插入汽車屬性"</string>
     <string name="car_can_bus_failure" msgid="2334035748788283914">"控制器區域網路操作失敗"</string>
     <string name="car_can_bus_failure_desc" msgid="4125516222786484733">"控制器區域網路未有回覆。請拔除並重新插上汽車音響主機，然後重新啟動汽車"</string>
     <string name="trust_device_default_name" msgid="4213625926070261253">"我的裝置"</string>
