Add PERMISSION_READ_CAR_SEATS for SEAT_OCCUPANCY.
Flag: android.car.feature.vehicle_property_25q2_3p_permissions
Bug: 357910697
Test: atest CarPropertyManagerTest
Change-Id: I37b301ed64cdce7a3e809fd8fd490488d0a8ef72

--- a/service/res/values/strings.xml
+++ b/service/res/values/strings.xml
@@ -248,6 +248,11 @@
     <!-- Permission text: apps can control car seats [CHAR LIMIT=NONE] -->
     <string name="car_permission_desc_control_car_seats">Control car\u2019s seats.</string>
 
+    <!-- Permission text: apps can read car seats [CHAR LIMIT=NONE] -->
+    <string name="car_permission_label_read_car_seats">read car\u2019s seats</string>
+    <!-- Permission text: apps can read car seats [CHAR LIMIT=NONE] -->
+    <string name="car_permission_desc_read_car_seats">Read car\u2019s seats.</string>
+
     <!-- Permission text: apps can read car seat belts [CHAR LIMIT=NONE] -->
     <string name="car_permission_label_read_car_seat_belts">read car\u2019s seat belts</string>
     <!-- Permission text: apps can read car seat belts [CHAR LIMIT=NONE] -->
