Add PERMISSION_TIRES_3P for TIRE_PRESSURE.
Flag: android.car.feature.vehicle_property_25q2_3p_permissions
Bug: 357910697
Test: atest CarPropertyManagerTest
Change-Id: I0093276ddc8246612bf122508a9301ff7c3fc59b

--- a/service/res/values/strings.xml
+++ b/service/res/values/strings.xml
@@ -348,6 +348,11 @@
     <!-- Permission text: apps access car's tire information [CHAR LIMIT=NONE] -->
     <string name="car_permission_desc_car_tires">Access car\u2019s tire information.</string>
 
+    <!-- Permission text: apps access car's tire information [CHAR LIMIT=NONE] -->
+    <string name="car_permission_label_car_tires_3p">read car\u2019s tires information</string>
+    <!-- Permission text: apps access car's tire information [CHAR LIMIT=NONE] -->
+    <string name="car_permission_desc_car_tires_3p">Read car\u2019s tire information.</string>
+
     <!-- Permission text: apps access car's steering angle information [CHAR LIMIT=NONE] -->
     <string name="car_permission_label_car_steering">read car\u2019s steering angle information</string>
     <!-- Permission text: apps access car's steering angle information [CHAR LIMIT=NONE] -->
